# urp

./: .env.example  .gitignore  .pre-commit-config.yaml  BLACK_SHADOWS_IMPLEMENTATION.md  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  README_REFACTORED.md  RELEASE.md  VERSIONING.md  build.py  build_refactored.py  config.ini  debug_export_alpha_masks.py  debug_unpack_assets.py  gui.py  gui_app.py  main.py  pixelation.py  pyproject.toml  requirements.txt  run_cli.py  run_gui.py  test_refactored.py  test_structure.py  unitypy_fixes.py  urp.psd  version.py
.github/workflows/: ci.yml  release.yml
core/: __init__.py  asset_processor.py  backup_manager.py  config_manager.py  file_utils.py  main_processor.py  pixelation_engine.py
gui/: __init__.py  main_window.py
gui/components/: __init__.py  backup_manager_ui.py  edition_selector.py  path_selector.py  preview_panel.py  progress_panel.py
gui/utils/: __init__.py  image_utils.py
monkeypatch/: compress_etcpak.py
scripts/: setup.sh
src/: __init__.py  cli_main.py  gui_app.py  gui_main.py  main.py
src/config/: __init__.py  config_manager.py  settings.py
src/core/: __init__.py  application.py  config.py  file_utils.py  unity_processor.py
src/game/: __init__.py  asset_manager.py  unity_processor.py
src/gui/: __init__.py  components.py  main_window.py
src/image_processing/: __init__.py  pixelation.py
src/processing/: __init__.py  image_processor.py  pixelation_processor.py
src/utils/: __init__.py  file_utils.py  memory_utils.py  unitypy_patch.py  validation_utils.py
tests/: __init__.py  test_version.py
tools/: __init__.py  debug_unpack_assets.py
utils/: __init__.py  memory_utils.py
