[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unofficial-retro-patch"
version = "0.1.1"
description = "Unofficial Retro Patch for Stronghold: Definitive Edition - brings back the classic pixel art charm"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "BALOTIAS", email = "your-email@example.com"}
]
keywords = ["stronghold", "game", "mod", "pixelation", "retro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.8"
dependencies = [
    "UnityPy>=1.9.0",
    "Pillow>=9.0.0",
    "python-dotenv>=0.19.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/BALOTIAS/urp"
Repository = "https://github.com/BALOTIAS/urp"
Issues = "https://github.com/BALOTIAS/urp/issues"

[project.scripts]
urp = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "assets*", "downloads*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true